<resources>
    <string name="app_name">ShopKart</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t Have an Account? Sign Up</string>
    <string name="forget_password">Forget Password?</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item price</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="seller">Seller</string>
    <string name="buyer">Buyer</string>
    <string name="reset">Reset Link</string>
    <string name="item_rating">Item rating</string>
</resources>