<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:scaleType="fitXY"
            android:src="@drawable/item_sample"/>

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginTop="6dp"/>

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_price"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/item_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_rating"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>