<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/lightBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".LoginActivity"
            android:background="@color/lightBackground">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/login_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_yourself"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/register_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/login_text"
                        android:hint="@string/username"
                        android:layout_marginTop="60dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:inputType="text"
                        android:padding="10dp"
                        android:background="@drawable/edit_text_background"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/register_username"
                        app:layout_constraintBottom_toTopOf="@id/register_mobile_number"
                        android:hint="@string/email"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:inputType="text"
                        android:padding="10dp"
                        android:background="@drawable/edit_text_background"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/register_mobile_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/register_email"
                        app:layout_constraintBottom_toTopOf="@id/register_password"
                        android:hint="@string/mobile_number"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:inputType="number"
                        android:padding="10dp"
                        android:background="@drawable/edit_text_background"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/register_mobile_number"
                        app:layout_constraintBottom_toTopOf="@+id/register_confirm_password"
                        android:hint="@string/password"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:inputType="textPassword"
                        android:background="@drawable/edit_text_background"
                        android:padding="10dp"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/register_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/register_password"
                        app:layout_constraintBottom_toTopOf="@+id/radio_group"
                        android:hint="@string/password"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:inputType="textPassword"
                        android:background="@drawable/edit_text_background"
                        android:padding="10dp"/>

                    <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="16dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toTopOf="@id/register_button"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/register_confirm_password">

                        <RadioButton
                            android:id="@+id/rb_seller"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginEnd="20dp"
                            android:layout_weight="1"
                            android:background="@drawable/profile_type_tab_selector"
                            android:button="@null"
                            android:checked="true"
                            android:gravity="center"
                            android:text="@string/seller"
                            android:textColor="@drawable/profile_type_text_color_selector"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/rb_buyer"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="20dp"
                            android:layout_weight="1"
                            android:background="@drawable/profile_type_tab_selector"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/buyer"
                            android:textColor="@drawable/profile_type_text_color_selector"
                            android:textStyle="bold" />
                    </RadioGroup>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/register_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/radio_group"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginTop="70dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="50dp"
                        android:text="@string/register"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:padding="8dp"
                        android:textSize="20sp"
                        android:background="@drawable/button_background"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@string/already_have_an_account_login"
                        android:layout_marginBottom="6dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>